--- a/DIrectX/GameEngineContents/GameEngineContents.vcxproj
+++ b/DIrectX/GameEngineContents/GameEngineContents.vcxproj
@@ -201,6 +201,7 @@
     </ClCompile>
     <ClCompile Include="GameUnitUI.cpp" />
     <ClCompile Include="GreenArrow.cpp" />
+    <ClCompile Include="HeaderInfo.cpp" />
     <ClCompile Include="House.cpp" />
     <ClCompile Include="HouseBackGround.cpp" />
     <ClCompile Include="House_UI.cpp" />
@@ -260,6 +261,10 @@
     <ClCompile Include="SwordmanUltEffect.cpp" />
     <ClCompile Include="SystemBundle.cpp" />
     <ClCompile Include="TeamBundle.cpp" />
+    <ClCompile Include="TeamInfo.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="TextArrow.cpp">
       <SubType>
       </SubType>
@@ -313,6 +318,7 @@
     </ClInclude>
     <ClInclude Include="GameUnitUI.h" />
     <ClInclude Include="GreenArrow.h" />
+    <ClInclude Include="HeaderInfo.h" />
     <ClInclude Include="House.h" />
     <ClInclude Include="HouseBackGround.h" />
     <ClInclude Include="House_UI.h" />
@@ -367,6 +373,10 @@
     <ClInclude Include="SwordmanUltEffect.h" />
     <ClInclude Include="SystemBundle.h" />
     <ClInclude Include="TeamBundle.h" />
+    <ClInclude Include="TeamInfo.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="TextArrow.h">
       <SubType>
       </SubType>
