--- a/DIrectX/GameEngineCoreShader/GameEngineCoreShader.vcxproj
+++ b/DIrectX/GameEngineCoreShader/GameEngineCoreShader.vcxproj
@@ -131,6 +131,7 @@
     <FxCompile Include="DebugColorShader.fx" />
     <FxCompile Include="DebugLineShader.fx" />
     <FxCompile Include="RenderBase.fx" />
+    <FxCompile Include="TargetMerge.fx" />
     <FxCompile Include="TextureShader.fx" />
     <FxCompile Include="Transform.fx" />
   </ItemGroup>
