--- a/DIrectX/App/imgui.ini
+++ b/DIrectX/App/imgui.ini
@@ -9,9 +9,15 @@ Size=396,245
 Collapsed=0
 
 [Window][CONTENTSCONTROLWINDOW]
-ViewportPos=1338,49
+ViewportPos=1318,51
 ViewportId=0xAAE9C52B
 Size=223,231
+Collapsed=0
+
+[Window][GAMEENGINECOREWINDOW]
+ViewportPos=1117,281
+ViewportId=0x0D8BD9B6
+Size=416,386
 Collapsed=0
 
 [Docking][Data]
