김준영 : 선수영입 카드 업데이트

--- a/DIrectX/App/imgui.ini
+++ b/DIrectX/App/imgui.ini
@@ -9,15 +9,21 @@ Size=396,245
 Collapsed=0
 
 [Window][CONTENTSCONTROLWINDOW]
-ViewportPos=1318,51
+ViewportPos=1342,54
 ViewportId=0xAAE9C52B
 Size=223,231
 Collapsed=0
 
 [Window][GAMEENGINECOREWINDOW]
-ViewportPos=1221,280
+ViewportPos=1343,290
 ViewportId=0x0D8BD9B6
 Size=416,386
+Collapsed=0
+
+[Window][IMAGESHOT]
+ViewportPos=59,11
+ViewportId=0xFA445FFD
+Size=1304,761
 Collapsed=0
 
 [Docking][Data]
