김준영 : 선수 영입

--- a/DIrectX/App/imgui.ini
+++ b/DIrectX/App/imgui.ini
@@ -10,15 +10,18 @@ Collapsed=0
 
 [Window][CONTENTSCONTROLWINDOW]
 ViewportPos=1342,54
-ViewportId=0xAAE9C52B
-Size=223,231
+ViewportId=0xA4D966FE
+Size=223,116
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][GAMEENGINECOREWINDOW]
-ViewportPos=1343,290
-ViewportId=0x0D8BD9B6
-Size=416,386
+ViewportPos=1342,54
+ViewportId=0xA4D966FE
+Pos=0,118
+Size=223,113
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][IMAGESHOT]
 ViewportPos=59,11
@@ -27,4 +30,7 @@ Size=1304,761
 Collapsed=0
 
 [Docking][Data]
+DockNode    ID=0x00000001 Pos=1342,54 Size=223,231 Split=Y
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=223,116 Selected=0xD02E799F
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=223,113 Selected=0x9541259C
 
