--- a/DIrectX/GameEngineContents/GameEngineContents.vcxproj
+++ b/DIrectX/GameEngineContents/GameEngineContents.vcxproj
@@ -169,6 +169,8 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Awards.cpp" />
+    <ClCompile Include="AwardsLevel.cpp" />
     <ClCompile Include="BanPickBoard.cpp" />
     <ClCompile Include="BanPickCard.cpp" />
     <ClCompile Include="BanPickLevel.cpp" />
@@ -319,6 +321,8 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Awards.h" />
+    <ClInclude Include="AwardsLevel.h" />
     <ClInclude Include="BanPickBoard.h" />
     <ClInclude Include="BanPickCard.h" />
     <ClInclude Include="BanPickLevel.h" />
