--- a/DIrectX/GameEngineContents/GameEngineContents.vcxproj.filters
+++ b/DIrectX/GameEngineContents/GameEngineContents.vcxproj.filters
@@ -253,6 +253,12 @@
     <ClCompile Include="ResultBoard.cpp">
       <Filter>UI\BanPickUI</Filter>
     </ClCompile>
+    <ClCompile Include="AwardsLevel.cpp">
+      <Filter>Level</Filter>
+    </ClCompile>
+    <ClCompile Include="Awards.cpp">
+      <Filter>Object</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ContentsCore.h" />
@@ -509,6 +515,12 @@
     </ClInclude>
     <ClInclude Include="ResultBoard.h">
       <Filter>UI\BanPickUI</Filter>
+    </ClInclude>
+    <ClInclude Include="AwardsLevel.h">
+      <Filter>Level</Filter>
+    </ClInclude>
+    <ClInclude Include="Awards.h">
+      <Filter>Object</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
