--- a/DIrectX/GameEngineContents/GameEngineContents.vcxproj.filters
+++ b/DIrectX/GameEngineContents/GameEngineContents.vcxproj.filters
@@ -268,6 +268,9 @@
     <ClCompile Include="BanEffect.cpp">
       <Filter>Global</Filter>
     </ClCompile>
+    <ClCompile Include="FontEffect.cpp">
+      <Filter>Global</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ContentsCore.h" />
@@ -538,6 +541,9 @@
       <Filter>UI\HouseUI</Filter>
     </ClInclude>
     <ClInclude Include="BanEffect.h">
+      <Filter>Global</Filter>
+    </ClInclude>
+    <ClInclude Include="FontEffect.h">
       <Filter>Global</Filter>
     </ClInclude>
   </ItemGroup>
